Now HTML document prettier

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 <body>
   <main class="task-app">
     <form class="task-form">
-      <input class="task-form__field" id="text" type="text" placeholder="Write your task here..." required>
-      <button class="task-form__button">Add</button>
+      <input class="task-form__text-field" id="text" type="text" placeholder="Write your task here..." required>
+      <button class="task-form__add-button" type="submit">Add</button>
     </form>
     <ul class="task-list">
       <template class="task-item__template">
